--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -20,6 +20,7 @@
           <label for="password">Password</label>
           <span class="helper-text" data-error="Enter password min 6 characters" data-success="right"></span>
         </div>
+        <input type="hidden" name="_csrf" value="{{csrf}}">
         <button class="btn btn-primary" type="submit">Login</button>
       </form>
 
@@ -47,7 +48,7 @@
           <label for="confirm">Confirm password</label>
           <span class="helper-text" data-error="Enter password min 6 characters" data-success="right"></span>
         </div>
-
+        <input type="hidden" name="_csrf" value="{{csrf}}">
         <button class="btn btn-primary" type="submit">Registration</button>
       </form>
     </div>
